# azure-sdk-for-rust-docs

./: .cspell.json  .editorconfig  .env  .gitignore  CODE_REVIEW.md  Cargo.toml  README.md  azure.yaml  rust-toolchain.toml  rustfmt.toml  sample.env
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
examples/: authenticate_azure_cli.rs  authenticate_azure_dev_cli.rs  authenticate_server.rs  azure-core-types.md  client_objects.rs  custom_async_runtime.rs  custom_header_types.rs  custom_http_client.rs  custom_paging_byom.rs  custom_request_types.rs  custom_reqwest_behavior.rs  error_handling.rs  global_client_options.rs  page_of_items.rs  page_results.rs  paging_all_items.rs  response.rs  response_handling.rs  type_conventions_headers.rs  type_conventions_request.rs
infra/: main.bicep  main.bicepparam  resources.bicep
scripts/: create-resources.sh
src/: lib.rs
