[package]
name = "docs"
description = "Examples using the Azure SDK for Rust"
version = "0.1.0"
license = "MIT"
edition = "2021"
authors = ["Heath Stewart (https://github.com/heaths)"]
publish = false

[dev-dependencies]
azure_core = "*"
azure_identity = "*"
azure_security_keyvault_secrets = "*"
futures = "*"
tokio = { version = "1.47.1", features = ["macros"] }

[lints.rust]
unused_variables = "allow"
