[package]
name = "docs"
description = "Examples using the Azure SDK for Rust"
version = "0.1.0"
license = "MIT"
edition = "2021"
authors = ["Heath Stewart (https://github.com/heaths)"]
publish = false

[dev-dependencies]
azure_core = "*"
azure_identity = "*"
azure_security_keyvault_secrets = "*"
dotazure = "0.2.0"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["macros"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["gzip"] }
ureq = "2.10"
serde = { version = "1.0", features = ["derive"] }

[lints.rust]
unused_variables = "allow"
